<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.sciencequiz.QuizActivity"
    android:background="@drawable/blackboard_bg"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                style="@style/quizlinearstyle">
            <TextView
                style="@style/questionStyle"
                android:id="@+id/quiz1"
                android:text="@string/quiz_1"
                />
            <RadioGroup
                android:id="@+id/choice1"
                style="@style/rgroupstyle"
                >

                <RadioButton
                    android:id="@+id/quiz1_A"
                    style="@style/choicesStyle"
                    android:text="@string/choice1_A" />

                <RadioButton
                    android:id="@+id/quiz1_B"
                    style="@style/choicesStyle"
                    android:text="@string/choice1_B" />

                <RadioButton
                    android:id="@+id/quiz1_C"
                    style="@style/choicesStyle"
                    android:text="@string/choice1_C" />

                <RadioButton
                    android:id="@+id/quiz1_D"
                    style="@style/choicesStyle"
                    android:text="@string/choice1_D" />
            </RadioGroup>
            <View
               style="@style/viewStyle"
                />
            </LinearLayout>
        <LinearLayout
            style="@style/quizlinearstyle">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                style="@style/questionStyle"
                android:id="@+id/quiz2"
                android:text="@string/quiz_2"
                />
            <ImageView
                android:id="@+id/quiz2Img"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/quiz2"
                android:layout_below="@id/quiz2"/>
                <RadioGroup
                    android:id="@+id/choice2"
                    style="@style/rgroupstyle"
                    android:orientation="vertical"
                    android:layout_below="@id/quiz2"
                    android:layout_toRightOf="@id/quiz2Img"
                    >

                    <RadioButton
                        android:id="@+id/quiz2_A"
                        style="@style/choicesStyle"
                        android:text="@string/choice2_A" />

                    <RadioButton
                        android:id="@+id/quiz2_B"
                        style="@style/choicesStyle"
                        android:text="@string/choice2_B" />

                    <RadioButton
                        android:id="@+id/quiz2_C"
                        style="@style/choicesStyle"
                        android:text="@string/choice2_C" />
                </RadioGroup>

            </RelativeLayout>
            <View
                style="@style/viewStyle"
                />
        </LinearLayout>
            <LinearLayout
                style="@style/quizlinearstyle">
                <TextView
                    style="@style/questionStyle"
                    android:id="@+id/quiz3"
                    android:text="@string/quiz_3"
                    />
                <EditText
                    android:id="@+id/quiz3Ans"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:textColor="#fff"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"/>
                <View
                    style="@style/viewStyle"
                    />
            </LinearLayout>
        <LinearLayout
            style="@style/quizlinearstyle">
            <TextView
                style="@style/questionStyle"
                android:id="@+id/quiz4"
                android:text="@string/quiz_4"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <CheckBox
                android:id="@+id/quiz4chkA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice4_A"
                style="@style/choicesStyle"
                />
                <CheckBox
                    android:id="@+id/quiz4chkB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice4_B"
                    style="@style/choicesStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/quiz4chkC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice4_C"
                    style="@style/choicesStyle"
                    />
                <CheckBox
                    android:id="@+id/quiz4chkD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice4_D"
                    style="@style/choicesStyle"
                    />
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/quizlinearstyle"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    style="@style/questionStyle"
                    android:id="@+id/quiz5"
                    android:text="@string/quiz_5"
                    />
                <EditText
                    android:id="@+id/quiz5Ans"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_light"/>
                </LinearLayout>
                    <View
                    style="@style/viewStyle"
                    />
            </LinearLayout>
            <LinearLayout
               style="@style/quizlinearstyle">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:layout_gravity="center"
                    android:onClick="calcScore"/>
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
